corrected styling on mobile for projects area, corrected spacing of contact on mobile

--- a/assets/css/skins/darkblue.css
+++ b/assets/css/skins/darkblue.css
@@ -92,5 +92,13 @@ a {
     .hero-buttons{
       margin-top: 30px;
     }
+
+  }
+
+  @media screen and (max-width: 519px){
+    .contact-info > ul > li:nth-child(2){
+      margin-left: 40px;
+      margin-right: 0px;
+    }
   }
   
